--- a/public/style.css
+++ b/public/style.css
@@ -7,10 +7,10 @@ body {
 #myCanvas {
   width: 100vw;
   height: 100vh;
+  background-color: #e2aa87;
 }
 
 canvas[resize] {
   width: 100%;
   height: 100%;
 }
-
