--- a/public/style.css
+++ b/public/style.css
@@ -3,13 +3,13 @@ body {
   overflow: hidden;
   height: 100%;
   font-family: sans-serif;
+  background: #e2aa87 !important;
 }
 #myCanvas {
   width: 100vw;
   height: 100vh;
   background-color: #e2aa87;
 }
-
 canvas[resize] {
   width: 100%;
   height: 100%;
