--- a/public/style.css
+++ b/public/style.css
@@ -14,3 +14,7 @@ canvas[resize] {
   width: 100%;
   height: 100%;
 }
+h1 {
+  font-family: 'Jua', sans-serif !important;
+  font-size: 510% !important;
+}
